<resources>
    <string name="app_name">SapaSampah</string>
    <string name="homeMenu">Beranda</string>
    <string name="notifMenu">Riwayat</string>
    <string name="userMenu">Akun</string>


    <string name="electricity">Listrik\nPrabayar</string>
    <string name="credit">Pulsa\nPrabayar</string>
    <string name="pdam">Air\nPDAM</string>
    <string name="more">Lainnya\n</string>
    <string name="lastTake">Pengambilan sampah terakhir:</string>
    <string name="moreHistory">Riwayat lengkap</string>
    <string name="berita">Berita</string>
    <string name="balanceStatement">Saldo Anda:</string>
    <string name="addrMenu">Alamat</string>
    <string name="qrMenu">QR Code Saya</string>
    <string name="helpMenu">Panduan Pengguna</string>
    <string name="aboutMenu">Tentang Aplikasi</string>
    <string name="logout">Log Out</string>
    <string name="tel">Nomor Telepon:</string>
    <string name="beli">Beli</string>
    <string name="value">Nominal:</string>
    <string name="electr">Nomor Meter/ID Pelanggan:</string>
    <string name="qrcode">Print gambar QR Code ini dan tempelkan pada\ntempat sampah Anda</string>
    <string name="download">Unduh QR Code</string>
    <string name="actPdam">Area:</string>
    <string name="actPdam1">Nomor Pelanggan:</string>

    <string name="guide1">1. Petugas SapaSampah.id akan mengambil sampah Anda di alamat yang sudah ditentukan.</string>
    <string name="guide2">2. Petugas akan menimbang sampah Anda dan men-scan QR Code yang sudah ditempelkan oleh pengguna. QR code dapat diuduh di halaman QR Code Saya.</string>
    <string name="guide3">3. Pengguna dapat mengkategoriasikan sampahnya berdasarakan tiga tipe, yaitu organik, non-organik, dan plastik.</string>
    <string name="guide4">4. Jumlah e-money yang didapatkan akan secara otomatis masuk ke akun SapaSampah.id pengguna.</string>

    <string name="price">Harga sampah:</string>
    <string name="price1">- Rp1.000/kg untuk tiap tipe sampah yang dikategorisaikan.</string>
    <string name="price2">- Rp500/kg untuk sampah yang tidak dikategiorisasikan.</string>

    <string name="addrName">Nama:</string>
    <string name="addrProvince">Provinsi:</string>
    <string name="addrCity">Kota/Kabupaten:</string>
    <string name="addrKecamatan">Kecamatan:</string>
    <string name="addrPost">Kode Pos:</string>
    <string name="addrFull">Alamat Lengkap:</string>

    <!-- Below is the temporary offline data for the ListView. In the future it should be replaced with an actual data from Firebase-->

    <string name="historyStat">Pengambilan Sampah</string>
    <string name="prepaid">Prabayar</string>
    <string name="postpaid">Pascabayar</string>
    <string name="electrpost">Listrik\nPascabayar</string>
    <string name="creditpost">Pulsa\nPascabayar</string>
    <string name="signout">Sign Out</string>

    <array name="historyDate">
        <item>6 Januari 2019</item>
        <item>4 Januari 2019</item>
        <item>3 Januari 2019</item>
        <item>2 Januari 2019</item>
        <item>31 Desember 2019</item>
        <item>30 Desember 2019</item>
    </array>

    <array name="historyTime">
        <item>09:21 WIB</item>
        <item>08:53 WIB</item>
        <item>10:42 WIB</item>
        <item>09:13 WIB</item>
        <item>08:41 WIB</item>
        <item>09:21 WIB</item>
    </array>

    <array name="historyAmount">
        <item>Rp2.400</item>
        <item>Rp2.200</item>
        <item>Rp2.700</item>
        <item>Rp3.900</item>
        <item>Rp2.900</item>
        <item>Rp2.800</item>
    </array>

    <array name="historyWeight">
        <item>2,4 Kg</item>
        <item>2,2 Kg</item>
        <item>2,7 Kg</item>
        <item>3,9 Kg</item>
        <item>2,9 Kg</item>
        <item>2,8 Kg</item>
    </array>

    <array name="balanceDate">
        <item>6 Januari 2019</item>
        <item>6 Januari 2019</item>
        <item>4 Januari 2019</item>
        <item>3 Januari 2019</item>
        <item>2 Januari 2019</item>
        <item>31 Desember 2019</item>
        <item>30 Desember 2019</item>
    </array>

    <array name="balanceTime">
        <item>17:43 WIB</item>
        <item>09:21 WIB</item>
        <item>08:53 WIB</item>
        <item>10:42 WIB</item>
        <item>09:13 WIB</item>
        <item>08:41 WIB</item>
        <item>09:21 WIB</item>
    </array>

    <array name="balanceAmount">
        <item>-Rp11.000</item>
        <item>+Rp2.400</item>
        <item>+Rp2.200</item>
        <item>+Rp2.700</item>
        <item>+Rp3.900</item>
        <item>+Rp2.900</item>
        <item>+Rp2.800</item>
    </array>

    <array name="balanceStat">
        <item>Saldo Rp5.900</item>
        <item>Saldo Rp16.900</item>
        <item>Saldo Rp14.500</item>
        <item>Saldo Rp12.300</item>
        <item>Saldo Rp9.600</item>
        <item>Saldo Rp5.700</item>
        <item>Saldo Rp2.800</item>
    </array>

    <array name="balanceType">
        <item>Pembelian Pulsa Prabayar</item>
        <item>Pengambilan Sampah</item>
        <item>Pengambilan Sampah</item>
        <item>Pengambilan Sampah</item>
        <item>Pengambilan Sampah</item>
        <item>Pengambilan Sampah</item>
        <item>Pengambilan Sampah</item>
    </array>
</resources>
