<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    tools:context=".TransactionActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/transactionToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:theme="@style/ToolbarTheme"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Transaksi"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#000"
            android:layout_marginRight="72dp"
            android:textSize="18sp"/>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/topBar"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintTop_toBottomOf="@+id/textView39">

        <LinearLayout
            android:id="@+id/moreElectrPre"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="bottom|center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/electricity_pre" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/electricity"
                android:textAlignment="center"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/moreCredPre"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="bottom|center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/mobile_pre" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/credit"
                android:textAlignment="center"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/prepaid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transactionToolbar" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/postpaid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/topBar"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintTop_toBottomOf="@+id/textView40">

        <LinearLayout
            android:id="@+id/moreElectrPost"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="bottom|center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/electricity_post" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/electrpost"
                android:textAlignment="center"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/moreCredPost"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="bottom|center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/mobile_post" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/creditpost"
                android:textAlignment="center"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/morePdam"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="bottom|center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/water" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/pdam"
                android:textAlignment="center"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>